--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -36,8 +36,11 @@
              
             <li><a href="/pages/about.html">About</a></li>
             <li><a href="/Resumé.html">Resume</a></li>
-            <li><a href="/categories.html">Work Samples</a></li>
-  
+            <li><a href="/pages/print.html">Print</a></li>
+            <li><a href="/pages/audio.html">Audio</a></li>
+            <li><a href="/pages/video.html">Video</a></li>
+         <!-- <li><a href="/pages/multimedia.html ">Multimedia</a></li>
+             <li><a href="/categories.html">All Samples</a></li> -->
           </li>
           </ul>
         </div>
