--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -81,7 +81,7 @@
           </form>
 
 
-        </div><!-- /.navbar-collapse -->
+        </d}iv><!-- /.navbar-collape -->
       </nav>
 
       <div class="container">
