--- a/_layouts/page2.html
+++ b/_layouts/page2.html
@@ -3,7 +3,7 @@ layout: default
 ---
 {% include JB/setup %}
 {% include themes/twitter/page.html %}
-
+{% include google_analytics.html %}
 <br>
 <hr>
 
@@ -21,5 +21,4 @@ layout: default
     </script>
     <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-
-
+    
