--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -21,7 +21,7 @@
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
-  -->
+    -->
   </head>
 
   <body>
@@ -39,6 +39,7 @@
             <li><a href="/pages/print.html">Print</a></li>
             <li><a href="/pages/audio.html">Audio</a></li>
             <li><a href="/pages/video.html">Video</a></li>
+            <li><a href="/pages/photography.html">Photography</a></li>
          <!-- <li><a href="/pages/multimedia.html ">Multimedia</a></li>
          <li><a href="/categories.html">All Samples</a></li> 
          <form class="navbar-search pull-left">
