switched to bootstrap 3; mobile friendly fixes; layout change

--- a/_includes/themes/bootstrap/page2.html
+++ b/_includes/themes/bootstrap/page2.html
@@ -2,13 +2,12 @@
 layout: default
 ---
 {% include JB/setup %}
-{% include themes/bootstrap/page.html %}
-
+{% include themes/twitter/page.html %}
 {% include google_analytics.html %}
 <br>
 <hr>
 
-<div class="container" id="disqus_thread"></div>
+<div id="disqus_thread"></div>
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
         var disqus_shortname = 'kyleduggan'; // required: replace example with your forum shortname
