--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,6 @@
 ---
 theme :
-  name : twitter
+  name : bootstrap
 ---
 {% include JB/setup %}
-{% include themes/twitter/default.html %}
-{% include google_analytics.html %}
-
+{% include themes/bootstrap/default.html %}
