--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,5 +2,4 @@
 layout: default
 ---
 {% include JB/setup %}
-{% include themes/twitter/page.html %}
-{% include google_analytics.html %}
+{% include themes/bootstrap/page.html %}
