--- a/_includes/themes/bootstrap/post.html
+++ b/_includes/themes/bootstrap/post.html
@@ -11,8 +11,37 @@
     <div class="content">
       {{ content }}
     </div>
+<hr>
+    {% unless page.tags == empty %}
+      <ul class="list-inline">
+      <li><i class="fa fa-tags"></i></li>
+Tags: {% assign tags_list = page.tags %}
+      {% if tags_list.first[0] == null %}
+      {% for tag in tags_list %}
+      <li>
+	      <a href="/tags.html#{{ tag }}-ref">
+          {{ tag | capitalize }} <span class="badge pull-right">({{ site.tags[tag].size }})</span>
+          {% unless forloop.last %},{% endunless %}
+        </a>
+      </li>
+      {% endfor %}
+      {% else %}
+      {% for tag in tags_list %}
+      <li>
+        <a href="{{ BASE_PATH }}{{ site.JB.tags_path }}#{{ tag[0] }}-ref">
+          {{ tag[0] }} <span>({{ tag[1].size }})</span>
+          {% unless forloop.last %},{% endunless %}
+        </a>
+      </li>
 
-    <hr>
+      {% endfor %}
+      {% endif %}
+      {% assign tags_list = nil %}
+    </ul>
+    {% endunless %}
+
+<!--paginator -->    
+
     <div class="button" align="center">
     <ul class="pagination">
       {% if page.previous %}
