--- a/_includes/themes/bootstrap/post.html
+++ b/_includes/themes/bootstrap/post.html
@@ -15,13 +15,13 @@
     {% unless page.tags == empty %}
       <ul class="list-inline">
       <li><i class="fa fa-tags"></i></li>
-Tags: {% assign tags_list = page.tags %}
+      <span class="glyphicon glyphicon-tags" style="color:#81B33A"></span> {% assign tags_list = page.tags %}
       {% if tags_list.first[0] == null %}
       {% for tag in tags_list %}
       <li>
 	      <a href="/tags.html#{{ tag }}-ref">
           {{ tag | capitalize }} <span class="badge pull-right">({{ site.tags[tag].size }})</span>
-          {% unless forloop.last %},{% endunless %}
+          {% unless forloop.last %} {% endunless %}
         </a>
       </li>
       {% endfor %}
@@ -30,7 +30,7 @@ Tags: {% assign tags_list = page.tags %}
       <li>
         <a href="{{ BASE_PATH }}{{ site.JB.tags_path }}#{{ tag[0] }}-ref">
           {{ tag[0] }} <span>({{ tag[1].size }})</span>
-          {% unless forloop.last %},{% endunless %}
+          {% unless forloop.last %} {% endunless %}
         </a>
       </li>
 
