--- a/_includes/themes/bootstrap/default.html
+++ b/_includes/themes/bootstrap/default.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
 
-    <title>{{ page.title }}</title>
-    <meta name="description" content="Kyle Duggan is an Ottawa based journalist. He holds a BA from Carleton where he studied Communications and Political Science and is now working on finishing his Master of Journalism.">
-    <meta name="author" content="{{ site.author.name }}">
+    <title>{{ page.title }}, Kyle Duggan, Journalist, Ottawa, Resume</title>
+    <meta name="description" content="Kyle Duggan is an Ottawa based journalist.">
+    <meta name="author" content="Kyle Duggan">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="{{ ASSET_PATH }}/resources/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -33,12 +33,12 @@
             {% assign pages_list = site.pages %}
             {% assign group = 'navigation' %}
 	    <!-- {% include JB/pages_list %} -->
-  <li><a href="/pages/about.html">About</a></li> 
-  <li><a href="/Resumé.html">Resume</a></li> 
-  <li><a href="/pages/print.html">Print</a></li> 
-  <li><a href="/pages/audio.html">Audio</a></li> 
-  <li><a href="/pages/video.html">Video</a></li> 
-  <li><a href="/pages/photography.html">Photography</a></li> 
+  <li><a href="/pages/about.html">About</a></li>
+  <li><a href="/Resumé.html">Resume</a></li>
+  <li><a href="/pages/print.html">Print</a></li>
+  <li><a href="/pages/audio.html">Audio</a></li>
+  <li><a href="/pages/video.html">Video</a></li>
+  <li><a href="/pages/multimedia.html">Multimedia</a></li>
           </ul>
         </div>
       </div>
@@ -48,7 +48,7 @@
       <hr>
       <footer>
         <p>
-          &copy; <a href="mailto:kyle.duggan@carleton.ca">Kyle Duggan</a> 2015. 
+          &copy; <a href="mailto:kyle.duggan@carleton.ca">Kyle Duggan</a> 2015.
             Site built with <a href="http://dbtek.github.io/jekyll-bootstrap-3" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll-Bootstrap-3</a>
             and <a href="http://getbootstrap.com" target="_blank">Twitter Bootstrap 3.0.3</a>
           </span>
