--- a/_includes/themes/bootstrap/default.html
+++ b/_includes/themes/bootstrap/default.html
@@ -38,7 +38,6 @@
   <li><a href="/pages/print.html">Print</a></li>
   <li><a href="/pages/audio.html">Audio</a></li>
   <li><a href="/pages/video.html">Video</a></li>
-  <li><a href="/pages/multimedia.html">Multimedia</a></li>
           </ul>
         </div>
       </div>
@@ -48,7 +47,7 @@
       <hr>
       <footer>
         <p>
-          &copy; <a href="mailto:kyle.duggan@carleton.ca">Kyle Duggan</a> 2015.
+          &copy; <a href="mailto:kyle.duggan@hotmail.ca">Kyle Duggan</a> 2015.
             Site built with <a href="http://dbtek.github.io/jekyll-bootstrap-3" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll-Bootstrap-3</a>
             and <a href="http://getbootstrap.com" target="_blank">Twitter Bootstrap 3.0.3</a>
           </span>
