--- a/_includes/themes/bootstrap/default.html
+++ b/_includes/themes/bootstrap/default.html
@@ -38,6 +38,7 @@
   <li><a href="/pages/print.html">Print</a></li>
   <li><a href="/pages/audio.html">Audio</a></li>
   <li><a href="/pages/video.html">Video</a></li>
+  <!--<li><a href="/pages/multimedia.html">Multimedia</a></li> -->
           </ul>
         </div>
       </div>
