--- a/_includes/themes/bootstrap/default.html
+++ b/_includes/themes/bootstrap/default.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>{{ page.title }}, Kyle Duggan, Journalist, Ottawa, Resume</title>
+    <title>{{ page.title }}</title>
     <meta name="description" content="Kyle Duggan is an Ottawa based journalist.">
     <meta name="author" content="Kyle Duggan">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
