--- a/_includes/themes/bootstrap/default.html
+++ b/_includes/themes/bootstrap/default.html
@@ -48,8 +48,8 @@
       <footer>
         <p>
           &copy; <a href="mailto:kyle.duggan@hotmail.ca">Kyle Duggan</a> 2015.
-            Site built with <a href="http://dbtek.github.io/jekyll-bootstrap-3" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll-Bootstrap-3</a>
-            and <a href="http://getbootstrap.com" target="_blank">Twitter Bootstrap 3.0.3</a>
+            Site built with Jekyll Bootstrap 3
+            and Twitter Bootstrap 3.0.3
           </span>
         </p>
       </footer>
