--- a/_includes/themes/bootstrap/default.html
+++ b/_includes/themes/bootstrap/default.html
@@ -35,8 +35,8 @@
   <li><a href="/pages/about.html">About</a></li>
   <li><a href="/Resumé.html">Resume</a></li>
   <li><a href="/pages/print.html">Print</a></li>
- <!-- <li><a href="/pages/audio.html">Audio</a></li>
-  <li><a href="/pages/video.html">Video</a></li>
+ <li><a href="/pages/audio.html">Audio</a></li>
+ <!--  <li><a href="/pages/video.html">Video</a></li>
   <li><a href="/pages/multimedia.html">Multimedia</a></li> -->
           </ul>
         </div>
